--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "test": "mocha"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "arnext": "^0.1.2",
+    "framer-motion": "^11.3.20",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@ardrive/turbo-sdk": "^1.19.0",
+    "@permaweb/aoconnect": "^0.0.59",
     "arnext-arkb": "^0.0.1",
     "cheerio": "^1.0.0",
     "cross-env": "^7.0.3",
